--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>tag</title>
     <link rel="stylesheet" href="E:\html\tag_417\style\styles.css">
     <base href="E:\html\tag_417\images\">
-    <base href="E:\html\tag_417\audio\">
+    <base href="E:\html\html_tag\audio\">
     
 </head>
 <body>
