--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tag</title>
-    <link rel="stylesheet" href="E:\html\tag_417\style\styles.css">
+    <link rel="stylesheet" href="styles.css">
     <base href="E:\html\tag_417\images\">
     <base href="E:\html\html_tag\audio\">
     
